<resources>
    <string name="app_name">Travel &amp; Tour</string>
    <string name="price_for_package">Price For Package</string>
    <string name="brief_itinerary">Brief Itinerary</string>
    <string name="package_include">Package Include</string>
    <string name="package_not_include">Package Not Include</string>
    <string name="choice_of_accommodations">Choice of Accommodations</string>
    <string name="highlights">Highlights</string>
    <string name="room_types">Room Types</string>
    <string name="amenities">Amenities</string>
    <string name="dining">Dining</string>
    <string name="activities">Activities</string>
    <string name="honeymoon_benefits">Honeymoon Benefits</string>
    <string name="benefits">Benefits</string>
    <string name="price_of_tour">Price of Tour</string>
    <string name="itinerary">Itinerary</string>
    <string name="services_include">Our Services Include</string>
    <string name="package_excludes">Package Excludes</string>
    <string name="thing_to_note">Things To Note</string>
    <string name="book_now">Book Now</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="passport_no">Passport No</string>
    <string name="name">Name</string>
    <string name="done">Done</string>
    <string name="invoice_no">Invoice No</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="tour">Tour</string>
    <string name="customer">Customer</string>
    <string name="price">Price</string>
    <string name="type">Type</string>
    <string name="invoice">Invoice</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="wishlist">Wishlist</string>
    <string name="choose_country">Choose Country</string>
    <string name="maldives">Maldives</string>
    <string name="vietnam">Vietnam</string>
    <string name="myanmar">Myanmar</string>
    <string name="hong_kong">Hong Kong</string>
    <string name="choose_tour_type">Choose Tour Type</string>
    <string name="package_tour">Package Tour</string>
    <string name="optional_tour">Optional Tour</string>
    <string name="sightseeing_tour">Sightseeing Tour</string>
    <string name="tour_title">Tour Title</string>
    <string name="add_price">Add Price</string>
    <string name="add_itinerary">Add Itinerary</string>
    <string name="add_include">Add Include</string>
    <string name="add_not_include">Add Not Include</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="sub_title">Sub Title</string>
    <string name="add_benefits">Add Benefits</string>
    <string name="add_note">Add Note</string>
    <string name="note">Note</string>
    <string name="our_services_include">Our Services Include</string>
    <string name="add_service">Add Service</string>
    <string name="things_to_note">Things To Note</string>
    <string name="save">Save</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="sign_up">Sign Up</string>
    <string name="add_optional_tour">Add Optional Tour</string>
    <string name="add_package_tour">Add Package Tour</string>
    <string name="add_sightseeing_tour">Add Sightseeing Tour</string>
    <string name="add_exclude">Add exclude</string>
    <string name="add_things_to_note">Add things to note</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="invoiced_list">Invoiced List</string>
    <string name="search">Search</string>
    <string name="title_activity_maps">Map</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="add_location_map">Add Location Map</string>
    <string name="country_editor">Country Editor</string>
    <string name="booking">Booking</string>
    <string name="options">Options</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>
