<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewOptionalTourActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_tour_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tour_title"
                android:imeOptions="actionNext" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_tour_sub_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sub_title"
                android:imeOptions="actionNext" />

        </com.google.android.material.textfield.TextInputLayout>

        <include layout="@layout/image_view" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_tour_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:imeOptions="actionNext" />

        </com.google.android.material.textfield.TextInputLayout>

        <include
            android:id="@+id/benefits"
            layout="@layout/layout_new_field" />

        <include
            android:id="@+id/price"
            layout="@layout/layout_new_field" />

    </LinearLayout>

</ScrollView>
